🔨 FIX: flex gap not working on Safari
Remove flex gap and add in margins

--- a/social-proof-section-grid/styles.css
+++ b/social-proof-section-grid/styles.css
@@ -38,7 +38,8 @@ body {
 .container > * {
 	display: flex;
 	flex-direction: column;
-	gap: 1em;
+
+	/* gap: 1em; */
 }
 
 /* =============================
@@ -64,9 +65,14 @@ h1 ~ p {
    ============================= */
 
 .rating {
+	margin-bottom: 1em;
 	padding: 0.75em 0.5em;
 	border-radius: 5px;
 	background-color: var(--lightGrayMagenta);
+}
+
+.rating:last-of-type {
+	margin-bottom: 0;
 }
 
 .stars img {
@@ -83,6 +89,7 @@ h1 ~ p {
    ============================= */
 
 .review {
+	margin-bottom: 1em;
 	padding: 2em;
 	border-radius: 10px;
 	background-color: var(--darkMagenta);
@@ -120,7 +127,21 @@ h1 ~ p {
 }
 
 /* =============================
-   Tablet and desktop
+   Frontend Mentor attribution
+   ============================= */
+
+.attribution {
+	margin-top: 2em;
+	font-size: 11px;
+	text-align: center;
+}
+
+.attribution a {
+	color: hsl(228, 45%, 44%);
+}
+
+/* =============================
+   Media queries - tablet and desktop
    ============================= */
 
 @media screen and (min-width: 850px) {
@@ -150,7 +171,7 @@ h1 ~ p {
 		align-items: center;
 		justify-content: center;
 		width: 70%;
-		padding: 1.25em 0.25em;
+		padding: 1.25em 0.55em;
 	}
 
 	.rating:nth-last-of-type(2) {
@@ -172,12 +193,13 @@ h1 ~ p {
 	.reviews {
 		grid-area: 2 / 1/ -1 / -1;
 		flex-direction: row;
-		gap: 2em;
 	}
 
 	.review {
 		align-self: flex-start;
 		min-height: 85%;
+		margin-right: 2em;
+		margin-bottom: 0;
 	}
 
 	.review:nth-last-of-type(2) {
@@ -186,19 +208,6 @@ h1 ~ p {
 
 	.review:last-of-type {
 		margin-top: 4em;
+		margin-right: 0;
 	}
-}
-
-/* =============================
-   Frontend Mentor attribution
-   ============================= */
-
-.attribution {
-	margin-top: 2em;
-	font-size: 11px;
-	text-align: center;
-}
-
-.attribution a {
-	color: hsl(228, 45%, 44%);
 }
